Installed Sonar Analyzer