@@ -1,10 +1,8 @@
 package net.rudahee.metallics_arts.setup.tabs;
 
 import com.klikli_dev.modonomicon.data.BookDataManager;
-import net.minecraft.client.Minecraft;
 import net.minecraft.world.item.CreativeModeTabs;
 import net.minecraft.world.item.ItemStack;
-import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.CreativeModeTabEvent;
 import net.minecraftforge.fml.ModList;
 import net.rudahee.metallics_arts.data.enums.implementations.custom_items.MetalMindEnum;
@@ -14,24 +12,21 @@ import net.rudahee.metallics_arts.setup.registries.ModBlocksRegister;
 import net.rudahee.metallics_arts.setup.registries.ModItemsRegister;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public class ModCreativeTabsEvents {
 
+    private ModCreativeTabsEvents() {
+        throw new IllegalStateException("Class can't be instantiated");
+    }
 
     public static void addToCombatTab(CreativeModeTabEvent.BuildContents event) {
         if (event.getTab().equals(CreativeModeTabs.COMBAT)) {
-            event.acceptAll(ModItemsRegister.STEEL_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ALUMINUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.COPPER_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ATIUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.LERASIUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ETTMETAL_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
+            armorsCreativeTab(event);
         }
     }
 
     public static void addToMetallicsArtsTab(CreativeModeTabEvent.BuildContents event) {
-        if (event.getTab().equals(ModCreativeTabs.METALLICS_ARTS_TAB)) {
+        if (event.getTab().equals(ModCreativeTabs.metallicsArtsTab)) {
             if (ModList.get().isLoaded("modonomicon")) {
                 BookDataManager.get().getBooks().values().forEach(books -> {
 
@@ -42,15 +37,15 @@ public class ModCreativeTabsEvents {
             }
 
             event.accept(ModItemsRegister.SAZED_DISC);
-            event.acceptAll(ModItemsRegister.ITEM_RAW_METAL.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_METAL_INGOT.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_GEMS_BASE.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_METAL_NUGGET.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_GEMS_NUGGET.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            event.acceptAll(ModItemsRegister.ITEM_RAW_METAL.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_METAL_INGOT.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_GEMS_BASE.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_METAL_NUGGET.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_GEMS_NUGGET.values().stream().map(ItemStack::new).toList());
 
-            event.acceptAll(Arrays.asList(SpikeEnum.values()).stream().map(spikeEnum -> new ItemStack(spikeEnum.getSpike())).collect(Collectors.toList()));
-            event.acceptAll(Arrays.asList(MetalMindEnum.values()).stream().map(ringEnum -> new ItemStack(ringEnum.getRing())).collect(Collectors.toList()));
-            event.acceptAll(Arrays.asList(MetalMindEnum.values()).stream().map(bandEnum -> new ItemStack(bandEnum.getBand())).collect(Collectors.toList()));
+            event.acceptAll(Arrays.stream(SpikeEnum.values()).map(spikeEnum -> new ItemStack(spikeEnum.getSpike())).toList());
+            event.acceptAll(Arrays.stream(MetalMindEnum.values()).map(ringEnum -> new ItemStack(ringEnum.getRing())).toList());
+            event.acceptAll(Arrays.stream(MetalMindEnum.values()).map(bandEnum -> new ItemStack(bandEnum.getBand())).toList());
 
             event.accept(ModBlocksRegister.CRUCIBLE_FURNACE);
             event.accept(ModBlocksRegister.HEMALURGY_ALTAR_FRONT);
@@ -67,34 +62,39 @@ public class ModCreativeTabsEvents {
             event.accept(ModItemsRegister.LARGE_VIAL);
 
 
-            ModItemsRegister.ChargeInList(); //todo Mirar si se puede hacer en otro lado - lo tuve que poner aca porque no registraba a tiempo los items sino
-            event.acceptAll(ModItemsRegister.ITEM_CORES.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_MELE_WEAPON.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_RANGE_WEAPON.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            ModItemsRegister.addChargeInList(); //todo Mirar si se puede hacer en otro lado - lo tuve que poner aca porque no registraba a tiempo los items sino
 
-            event.acceptAll(ModItemsRegister.STEEL_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ALUMINUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.COPPER_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ATIUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.LERASIUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ETTMETAL_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
+
+            armorsCreativeTab(event);
 
             event.accept(ModItemsRegister.MISTCLOACK);
 
         }
     }
 
+    private static void armorsCreativeTab(CreativeModeTabEvent.BuildContents event) {
+        event.acceptAll(ModItemsRegister.ITEM_CORES.values().stream().map(ItemStack::new).toList());
+        event.acceptAll(ModItemsRegister.ITEM_MELE_WEAPON.values().stream().map(ItemStack::new).toList());
+        event.acceptAll(ModItemsRegister.ITEM_RANGE_WEAPON.values().stream().map(ItemStack::new).toList());
+
+        event.acceptAll(ModItemsRegister.STEEL_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
+        event.acceptAll(ModItemsRegister.ALUMINUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
+        event.acceptAll(ModItemsRegister.COPPER_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
+        event.acceptAll(ModItemsRegister.ATIUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
+        event.acceptAll(ModItemsRegister.LERASIUM_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
+        event.acceptAll(ModItemsRegister.ETTMETAL_ARMOR.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
+    }
+
 
     public static void addToMetallicsArtsDecorationTab(CreativeModeTabEvent.BuildContents event) {
-        if (event.getTab().equals(ModCreativeTabs.METALLICS_ARTS_DECORATION_TAB)) {
-            //event.accept(ModItemsRegister.METALLICS_ARTS_BOOK);
+        if (event.getTab().equals(ModCreativeTabs.metallicsArtsDecorationTab)) {
 
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_ORES.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_DEEPSLATE_ORES.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_ORES.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_DEEPSLATE_ORES.values().stream().map(ItemStack::new).toList());
 
-            event.acceptAll(ModBlocksRegister.RAW_METAL_BLOCKS.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_BLOCKS.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_GEMS_BLOCKS.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            event.acceptAll(ModBlocksRegister.RAW_METAL_BLOCKS.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_BLOCKS.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_GEMS_BLOCKS.values().stream().map(ItemStack::new).toList());
 
             event.accept(ModBlocksRegister.BUDDING_ETTMETAL);
             event.accept(ModBlocksRegister.ETTMETAL_CLUSTER);
@@ -115,27 +115,27 @@ public class ModCreativeTabsEvents {
             event.accept(ModBlocksRegister.MEDIUM_LERASIUM_BUD);
 
 
-            event.acceptAll(ModBlocksRegister.DIVINE_CRISTAL_BLOCKS.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_SLAB.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_STAIRS.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            event.acceptAll(ModBlocksRegister.DIVINE_CRISTAL_BLOCKS.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_SLAB.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_STAIRS.values().stream().map(ItemStack::new).toList());
 
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_WALL.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_FENCE.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModBlocksRegister.BLOCK_METAL_FENCE_GATE.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_WALL.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_FENCE.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModBlocksRegister.BLOCK_METAL_FENCE_GATE.values().stream().map(ItemStack::new).toList());
 
-            event.acceptAll(ModItemsRegister.ITEM_ICONS_ALLOMANCY.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_ICONS_ALLOMANCY_DIVINE.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_ICONS_FERUCHEMIC.values().stream().map(ItemStack::new).collect(Collectors.toList()));
-            event.acceptAll(ModItemsRegister.ITEM_ICONS_FERUCHEMIC_DIVINE.values().stream().map(ItemStack::new).collect(Collectors.toList()));
+            event.acceptAll(ModItemsRegister.ITEM_ICONS_ALLOMANCY.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_ICONS_ALLOMANCY_DIVINE.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_ICONS_FERUCHEMIC.values().stream().map(ItemStack::new).toList());
+            event.acceptAll(ModItemsRegister.ITEM_ICONS_FERUCHEMIC_DIVINE.values().stream().map(ItemStack::new).toList());
 
-            event.acceptAll(ModBannersRegister.PATTERN_ITEMS.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
+            event.acceptAll(ModBannersRegister.PATTERN_ITEMS.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
         }
     }
 
     public static void addToMetallicsArtsEntityTab(CreativeModeTabEvent.BuildContents event) {
         if (event.getTab().equals(CreativeModeTabs.SPAWN_EGGS)) {
 
-           event.acceptAll(ModItemsRegister.ENTITY_EGGS.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).collect(Collectors.toList()));
+           event.acceptAll(ModItemsRegister.ENTITY_EGGS.values().stream().map(itemRegistryObject -> new ItemStack(itemRegistryObject.get())).toList());
         }
     }
 
